use column gap instead of margin to prevent misalignment, increase space size to 12px

--- a/client/my-sites/plugins/plugins-results-header/style.scss
+++ b/client/my-sites/plugins/plugins-results-header/style.scss
@@ -4,6 +4,7 @@
 	align-items: center;
 	justify-content: space-between;
 	flex-wrap: wrap;
+	column-gap: 12px;
 
 	.plugins-results-header__titles {
 		margin-bottom: 6px; // +18 from elements = 24 gap
@@ -26,7 +27,6 @@
 		justify-content: space-between;
 		margin-top: auto;
 		margin-bottom: 6px; // +20 from elements = 26 gap
-		margin-left: 6px;
 
 		.plugins-results-header__action {
 			font-size: $font-body-small;
